[gd_scene load_steps=8 format=3 uid="uid://bdg2pqgw3hbbr"]

[ext_resource type="Script" uid="uid://b7qei6jubks42" path="res://scripts/battle/enemy.gd" id="1_md0e3"]
[ext_resource type="Texture2D" uid="uid://8sy0b51sys0l" path="res://assets/enemies/red_dragon.png" id="2_4ra3w"]
[ext_resource type="SpriteFrames" uid="uid://c5ghbxv5csj7e" path="res://assets/anim_death.tres" id="3_4ra3w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ra3w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5uy6h"]
bg_color = Color(0.310182, 0.683522, 0.524874, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ra3w"]
bg_color = Color(0.0941176, 0.0941176, 0.0941176, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4w8v"]
bg_color = Color(1, 1, 1, 1)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_md0e3")

[node name="AttackTimer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_4ra3w")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBar" type="ProgressBar" parent="UI"]
custom_minimum_size = Vector2(50, 9)
layout_mode = 0
offset_left = -25.0
offset_top = -40.0
offset_right = 25.0
offset_bottom = -31.0
theme_override_styles/background = SubResource("StyleBoxEmpty_4ra3w")
theme_override_styles/fill = SubResource("StyleBoxFlat_5uy6h")
value = 60.0
show_percentage = false

[node name="DamageBar" type="ProgressBar" parent="UI/HealthBar"]
show_behind_parent = true
custom_minimum_size = Vector2(50, 5)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_4ra3w")
theme_override_styles/fill = SubResource("StyleBoxFlat_c4w8v")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="UI/HealthBar"]
wait_time = 0.5

[node name="HealthLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = -25.0
offset_top = -40.0
offset_right = 25.0
offset_bottom = -31.0
theme_override_colors/font_shadow_color = Color(0.188235, 0.188235, 0.188235, 1)
theme_override_font_sizes/font_size = 6
text = "1000/1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CooldownBar" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = -25.0
offset_top = -43.0
offset_right = 225.0
offset_bottom = -35.0
scale = Vector2(0.2, 0.2)
max_value = 1.0
show_percentage = false

[node name="TextLabel" type="Label" parent="UI"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_top = -28.0
offset_right = 20.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 6

[node name="DialogueLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = -54.0
offset_top = -55.0
offset_right = 54.0
offset_bottom = -46.0
theme_override_colors/font_color = Color(1, 0.517647, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.294118)
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 6
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = ExtResource("3_4ra3w")
animation = &"die"
frame = 9
frame_progress = 1.0

[node name="DialogueTimer" type="Timer" parent="."]
